fixed trade notifications

--- a/css/styles.css
+++ b/css/styles.css
@@ -635,9 +635,13 @@ button:hover {
     background-color: #d32f2f;
 }
 
+.snackbar.info {
+    background-color: #2196F3;
+}
+
 .snackbar.show {
     visibility: visible;
-    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.3s;
 }
 
 @keyframes fadein {
